--- a/ui/mods/section_of_foreign_intelligence/section_of_foreign_intelligence.css
+++ b/ui/mods/section_of_foreign_intelligence/section_of_foreign_intelligence.css
@@ -10,7 +10,8 @@
   margin-left: 18px;
 }
 
-.section_of_foreign_intelligence .commander-evaluation {
+.section_of_foreign_intelligence .commander-evaluation,
+.section_of_foreign_intelligence .area {
   font-weight: bold;
   color: white;
   margin-left: 2em;
